<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/coat_of_arms"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/ghla"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/coat_of_arms" />

    <TextView
        android:id="@+id/ghla"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="51dp"
        android:fontFamily="@font/varela"
        android:text="@string/ghla"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coat_of_arms"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghla" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="70dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_custom"
        android:fontFamily="@font/varela"
        android:gravity="center|left"
        android:hint="@string/username"
        android:inputType="number"
        android:paddingLeft="13dp"
        android:paddingTop="3dp"
        android:text="10455127"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/edit_text_custom"
        android:fontFamily="@font/varela"
        android:gravity="center|left"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:text="admin"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <CheckBox
        android:id="@+id/keep_signed_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/varela"
        android:text="@string/keep_signed_in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/region_list" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela"
        android:text="@string/app_desc"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/varela"
        android:padding="10dp"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keep_signed_in" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="49dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/wait"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/region_list"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/edit_text_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</android.support.constraint.ConstraintLayout>