<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/relativeLayout3">

        <TextView
            android:id="@+id/school_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela"
            android:text="@string/school_name"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/school_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/varela"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/school_name_label" />

        <TextView
            android:id="@+id/school_lat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/varela"
            android:text="@string/school_lat"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_name_label" />

        <TextView
            android:id="@+id/school_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/varela"
            android:text="0.00"
            android:textColor="@color/latitude"
            android:textSize="13dp"
            app:layout_constraintStart_toEndOf="@+id/school_lat_label"
            app:layout_constraintTop_toBottomOf="@+id/school_name" />

        <TextView
            android:id="@+id/school_lng_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/varela"
            android:text="@string/school_lng"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/school_lat"
            app:layout_constraintTop_toBottomOf="@+id/school_name_label" />

        <TextView
            android:id="@+id/school_lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/varela"
            android:text="0.00"
            android:textColor="@color/longitude"
            android:textSize="13dp"
            app:layout_constraintStart_toEndOf="@+id/school_lng_label"
            app:layout_constraintTop_toBottomOf="@+id/school_name" />


        <TextView
            android:id="@+id/school_dor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/varela"
            android:text="@string/school_dor"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_lng" />

        <TextView
            android:id="@+id/school_dor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/varela"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="13dp"
            app:layout_constraintStart_toEndOf="@+id/school_dor_label"
            app:layout_constraintTop_toBottomOf="@+id/school_lng" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>